- pfdhcplistener is better at updating node IP information (#1149)
- Fixed dot11Deauthentication traps issues with pfsetvlan (#1157)
- Add missing variable in snort.conf template (#1138)
- Fixed authorized MAC method in Cisco Catalyst 2960 (#987)
- Improved error handling in pfdhcplistener (#1150)
- Fixed problems with configurator.pl generating erroneous configuration (#1148)
- Removed some unnecessary warnings (#1065)

--------------------------------------------------------------------------------
Version 2.0.0 released on 2010-12-14

New Hardware Support
- SMC TigerStack 6128 L2 support in Port Security (feature sponsored by Seattle
  Pacific University)
- HP ProCurve MSM710 Mobility Controller
- Meru Networks MC3000 Wireless Controller
- Juniper EX Series in MAC RADIUS (Juniper's MAC Authentication)

New Features
- Simplification of the Wireless, Wired 802.1X and Wired MAC Authentication
  configuration. Because of a new FreeRADIUS module and a Web Service interface, 
  everything is now using standard PacketFence proccesses and configuration 
  files.
- VoIP devices authorization over RADIUS (#1008)
- Proxy interception. PacketFence can now operate in an environment where there
  is a client-side proxy configured. Check proxy-bypass in addons/ for details.
  (#1035)
- Passthroughs support! You can now configure PacketFence to let your users 
  reach specific websites even if they are in registration or isolation. (#772)
  (feature sponsored by Shippensburg University)
- New pf::web::custom extension point to customize the captive portal's code
  without the usual maintenance burden on upgrades (#1045)
- Bulk importation of nodes through CLI or Admin Web interface
- New parameter in switches.conf to ease FreeRADIUS integration
- Optional automatic configuration of FreeRADIUS' clients using switches.conf 
  (see addons/freeradius-integration/README for details)
- New 'pending' status for node. Allows for a wide range of captive portal 